# rqt_bag_recorder

./: CMakeLists.txt  README.md  package.xml  plugin.xml
include/rqt_bag_recorder/: bag_recorder_utilities.hpp  bag_recorder_widgets.hpp  rqt_bag_recorder.hpp
resource/: rqt_bag_recorder.ui
scripts/: rqt_bag_recorder
src/: bag_recorder_widgets.cpp  rqt_bag_recorder.cpp  test_bag_rec.cpp
test_config/: first.yaml  second.yaml
